# DNSMOSPro

./: .gitignore  LICENSE  README.md  build_standalone.bat  build_standalone.sh  cli.py  gui.py  install.bat  install.sh  requirements.txt  setup.cfg  standalone.spec  train.py
.github/workflows/: build-standalone.yml
