[metadata]
name = dnsmospro
version = 0.1.0
description = Student-friendly CLI for DNSMOS Pro speech quality scoring
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.9
py_modules =
    audio
    cli
    dataset
    gui
    model
    train
    utils
install_requires =
    gin-config==0.5.0
    librosa==0.10.2
    matplotlib==3.9.3
    numpy==1.26.4
    pandas==2.2.3
    scikit-learn==1.5.2
    scipy==1.13.1
    soundfile==0.12.1
    tqdm==4.67.1

[options.entry_points]
console_scripts =
    dnsmospro = cli:main
    dnsmospro-gui = gui:main
